# SyncFix

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt
data_creation/: README.md  build_3dgs_pairs.py  run_jobs_multi_gpu.py
src/syncfix/data/datasets/: dataset.py  datasets_config.py
src/syncfix/inference/: __init__.py  colmap_read_write_model.py  inference.py  utils.py
src/syncfix/models/: loss.py  utils.py
src/syncfix/models/embedders/latents_concat/: latents_concat_embedder_model.py
src/syncfix/models/syncfix/: __init__.py  syncfix_config.py  syncfix_model.py
src/syncfix/models/unets/: unet.py
